# hft-contracts

./: .gitignore  AUDIT_2026_05_28.md  CHANGELOG.md  CODEBASE.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/hft_contracts/: __init__.py  _atomic_io.py  _generated.py  _testing.py  _validators.py  atomic_io.py  canonical_hash.py  compatibility.py  experiment_record.py  experiment_recorder.py  feature_importance_artifact.py  gate_report.py  label_factory.py  labels.py  pairwise_compare_artifact.py  provenance.py  signal_manifest.py  test_metrics_ci_artifact.py  timestamp_utils.py  validation.py
src/hft_contracts/feature_sets/: __init__.py  hashing.py  schema.py
tests/: test_atomic_io.py  test_atomic_io_imports.py  test_canonical_hash.py  test_compatibility_contract.py  test_contract_self_consistency.py  test_experiment_record.py  test_experiment_recorder.py  test_export_contract_real_corpus.py  test_feature_importance_artifact.py  test_feature_sets.py  test_from_dict_null_hardening.py  test_gate_report.py  test_label_factory.py  test_label_factory_parity.py  test_pairwise_compare_artifact.py  test_phase0_fixtures.py  test_provenance.py  test_signal_manifest.py  test_signal_manifest_compatibility.py  test_test_metrics_ci_artifact.py  test_testing_helpers.py  test_timestamp_utils.py  test_validate_export_dir.py  test_validation_assert_finite.py  test_validation_day_metadata.py  test_validation_gates.py  test_validators.py
tests/fixtures/: pre_pydantic_compatibility_fingerprint.json  pre_pydantic_label_strategy_hash.json
tests/fixtures/phase0_benchmark/: README.md  fixture_metadata_basic.json  fixture_metadata_mbo.json  generate.py  golden_values.json  synthetic_basic.npz  synthetic_mbo.npz
tests/fixtures/phase0_benchmark/forward_pass/: hmhp_classifier.npz  hmhp_regressor.npz
tests/fixtures/python_rust_parity/v1/: README.md  labels.json
